* Updated RO::SPR class to support all known versions (v1.0 v1.1 v2.0 v2.1). * Added RO::PAL class. * Removed alpha component from the palette entry (it's not alpha, check PALETTEENTRY in windows).

--- a/roint/msvc2008/roint.vcproj
+++ b/roint/msvc2008/roint.vcproj
@@ -502,6 +502,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\pal.cc"
+				>
+			</File>
+			<File
 				RelativePath="..\ro.cc"
 				>
 			</File>
@@ -663,6 +667,10 @@
 			</File>
 			<File
 				RelativePath="..\include\ro\types\grf.h"
+				>
+			</File>
+			<File
+				RelativePath="..\include\ro\types\pal.h"
 				>
 			</File>
 			<File
